8037816: Fix for 8036122 breaks build with Xcode5/clang 8043029: Change 8037816 breaks HS build with older GCC versions which don't support diagnostic pragmas 8043164: Format warning in traceStream.hpp

Backport of main fix + two corrections, enables clang compilation, turns on format attributes, corrects/mutes warnings

Reviewed-by: kvn, coleenp, iveresov, twisti